--- a/Juda-Uwp/Features/Directory/DirectoryPage.xaml
+++ b/Juda-Uwp/Features/Directory/DirectoryPage.xaml
@@ -1,26 +1,30 @@
 ﻿<Page
-    x:Class="Juda_Uwp.Features.Settings.SettingsPage"
+    x:Class="Juda_Uwp.Features.DirectoryPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Juda_Uwp.Features.Settings"
+    xmlns:local="using:Juda_Uwp.Features.Directory"
+    xmlns:model="using:Juda_Uwp.Model"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+
     <Page.Resources>
         <ResourceDictionary Source="ms-appx:/Styles/Styles.xaml" />
     </Page.Resources>
-    
+
     <RelativePanel>
         <TextBlock 
             Style="{StaticResource HeaderTextBlockStyle}"
             Margin="25, 25, 0, 0"
             x:Name="textTitle"
             RelativePanel.AlignTopWithPanel="True"
-            Text="Settings" />
-        <Button 
-            Margin="25"
-            RelativePanel.Below="textTitle"
-            RelativePanel.AlignLeftWith="textTitle" Click="SyncNow_Click"
-            >Sync Now</Button>
+            Text="Directory" />
+        <ListView ItemsSource="{x:Bind ViewModel.Songs}" Margin="25, 120, 0, 0" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="model:Song">
+                    <TextBlock Text="{x:Bind Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>            
+        </ListView>
     </RelativePanel>
 </Page>
